--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -34,11 +34,11 @@
                 {{ range site.Data.authors }}
                   {{ if eq .name $authorName}}
                       <div class="author">
-                        <a href="/authors/{{ .name | urlize }}" class="author-image"><img
-                            src="{{.profile}}"
+                        <a href="{{$.Site.Params.basePath}}authors/{{ .name | urlize }}" class="author-image"><img
+                            src="{{$.Site.Params.basePath}}{{ .profile }}"
                             alt="author-image" height="76" width="76"></a>
                         <div class="information">
-                          <a href="/authors/{{ .name | urlize }}" class="author-name">{{ .name }}</a>
+                          <a href="{{$.Site.Params.basePath}}authors/{{ .name | urlize }}" class="author-name">{{ .name }}</a>
                           <p class="designation has-text-light">{{.designation}}</p>
                           <a href="https://appscode.com" target="_blank" class="company has-text-light">AppsCode Inc</a>
                         </div>
@@ -94,7 +94,7 @@
           <div class="user-info">
             {{ range $authorName := $p.Params.authors }}
             <img
-              src="{{ index $.Site.Data.authors ($authorName | urlize) "profile" }}"
+              src="{{$.Site.Params.basePath}}{{ index $.Site.Data.authors ($authorName | urlize) "profile" }}"
               alt="author"
               width="20" height="20"
               loading="lazy" decoding="async">
@@ -312,7 +312,7 @@
                 <div class="user-info">
                   {{ range $authorName := $p.Params.authors }}
                   <img
-                    src="{{ index $.Site.Data.authors ($authorName | urlize) "profile" }}"
+                    src="{{$.Site.Params.basePath}}{{ index $.Site.Data.authors ($authorName | urlize) "profile" }}"
                     alt="author"
                     width="20" height="20"
                     loading="lazy" decoding="async">
