Fix footer logo
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -240,7 +240,7 @@
             <div class="single-footer-widget">
               <!-- logo start -->
               <div class="footer-logo">
-                <a href="{{.Site.Params.domain_appscode}}"><img src="{{$.Site.Data.products.appscode.logo.src}}"
+                <a href="{{.Site.Params.domain_appscode}}"><img src="{{$.Site.Params.basePath}}{{$.Site.Data.products.appscode.logo.src}}"
                     alt="{{$.Site.Data.products.appscode.logo.alt}}" class="img" loading="lazy" decoding="async"/></a>
               </div>
               <!-- logo end -->
