--- a/static/assets/sass/base/utilities/_typography.scss
+++ b/static/assets/sass/base/utilities/_typography.scss
@@ -112,6 +112,11 @@ h6 {
 a {
   font-family: $ac-font-paragraph;
   color: $ac-primary;
+  &:not(button){
+    &:hover{
+      color: $ac-primary;
+    }
+  }
 }
 
 hr {
