--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -1,5 +1,5 @@
 .author-hero-area {
-  background-image: url(/blog/assets/images/bg-image/hero-bg.png);
+  background-image: url(/blog/assets/images/bg-image/hero-bg.jpg);
   margin-top: -74px;
   padding: 140px 0 70px;
 }
