--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -5,7 +5,7 @@
 //Utilities - Base styles, variables, mixins
 @import "base/utilities/_initial-variable";
 @import "base/utilities/_default";
-@import "base/utilities/_themes";
+// @import "base/utilities/_themes";
 @import "base/utilities/_typography";
 @import "base/utilities/global";
 
