Update brand color
Signed-off-by: mohin7 <mohin@appscode.com>

--- a/static/assets/sass/base/_variables.scss
+++ b/static/assets/sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // // Define Font Family
 // $ac-font-heading: "Raleway", sans-serif;
-// $ac-color-text: "Roboto", sans-serif;
+// $color-text;: "Roboto", sans-serif;
 // $ac-color-link: "Roboto", sans-serif;
 
 // // Define Font Size
@@ -12,7 +12,7 @@
 // // Define Colour
 // $ac-primary: #0071bd;
 // $ac-color-heading: #2a2a2a;
-// $ac-color-text: #4a4a4a;
+// $color-text;: #4a4a4a;
 // $ac-color-value: #4a4a4a;
 // $ac-white-light: #e8e8e8;
 // $border-dark-color: #bcbec0;
