--- a/static/assets/sass/components/_cta-area.scss
+++ b/static/assets/sass/components/_cta-area.scss
@@ -11,7 +11,7 @@
     align-items: center;
 
     h3 {
-      color: $ac-white;
+      color: $white-100;
       margin-bottom: 0.75rem;
       font-size: 28px;
     }
