--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -10,7 +10,7 @@
 
     &.image {
       img {
-        border: 2px solid $ac-white-light;
+        border: 2px solid $color-border;
       }
     }
   }
@@ -22,7 +22,7 @@
   }
 
   .single-blog-card {
-    border: 1px solid $ac-white-light;
+    border: 1px solid $color-border;
   }
 }
 
