--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -42,7 +42,7 @@
       font-family: "Roboto Mono", monospace;
 
       a {
-        color: $ac-white;
+        color: $white-100;
         font-family: "Roboto Mono", monospace;
       }
     }
@@ -64,7 +64,7 @@
       font-family: "Roboto Mono", monospace;
 
       &:hover {
-        border: 1px solid $ac-white-light;
+        border: 1px solid $color-border;
       }
     }
   }
@@ -115,13 +115,13 @@
   padding: 60px 0 70px;
 
   .button.is-mini {
-    border: 1px solid $ac-white-light !important;
+    border: 1px solid $color-border !important;
     transition: 0.3s ease-in-out;
-    color: $ac-color-heading;
+    color: $color-heading;
 
     &:hover {
-      border: $ac-primary;
-      color: $ac-white;
+      border: $primary;
+      color: $white-100;
     }
   }
 }
@@ -187,7 +187,7 @@ a.inline-button {
     bottom: 0;
     width: 0%;
     height: 1px;
-    background-color: $ac-color-heading;
+    background-color: $color-heading;
     transition: 0.3s ease-in-out;
   }
 
@@ -209,14 +209,14 @@ a.inline-button {
   min-height: 185px;
   padding: 32px 16px;
   transition: 0.3s ease-in-out;
-  border: 1px solid $ac-white-light;
+  border: 1px solid $color-border;
 
   &.list-view {
     height: auto;
     padding: 0;
     box-shadow: none;
     border: 1px solid transparent;
-    border-bottom: 1px dotted $ac-white-light;
+    border-bottom: 1px dotted $color-border;
     padding: 16px 0;
 
     &:hover {
@@ -242,13 +242,13 @@ a.inline-button {
 
     p {
       margin-bottom: 16px;
-      color: $ac-color-text;
+      color: $color-text;;
     }
   }
 
   &:hover {
     box-shadow: 0px 2px 30px rgba(44, 60, 74, 0.08);
-    // border: 1px solid $ac-primary;
+    // border: 1px solid $primary;
 
     .arrow-icon {
       opacity: 1;
@@ -256,7 +256,7 @@ a.inline-button {
     }
 
     h2 {
-      color: $ac-primary;
+      color: $primary;
     }
   }
 
@@ -312,7 +312,7 @@ a.inline-button {
     line-height: 17px;
     margin-bottom: 0;
 
-    color: $ac-color-text;
+    color: $color-text;;
   }
 }
 
@@ -336,7 +336,7 @@ a.inline-button {
       font-weight: 400;
       font-size: 16px;
       line-height: 160%;
-      color: $ac-primary;
+      color: $primary;
       letter-spacing: 0;
     }
   }
@@ -347,7 +347,7 @@ a.inline-button {
       font-size: 16px;
       line-height: 160%;
 
-      color: $ac-color-text;
+      color: $color-text;;
     }
   }
 }
@@ -385,7 +385,7 @@ ul.social-share-button {
       width: 46px;
       height: 46px;
       background: #1da1f2;
-      color: $ac-white;
+      color: $white-100;
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -428,8 +428,8 @@ ul.social-share-button {
   z-index: 99;
   background: #fff;
   box-shadow: 0 1px 3px rgba(15, 20, 40, 0.08);
-  border-bottom: 1px solid $ac-white-light;
-  border-top: 1px solid $ac-white-light;
+  border-bottom: 1px solid $color-border;
+  border-top: 1px solid $color-border;
   height: 64px;
   position: sticky;
   top: 0;
@@ -455,7 +455,7 @@ ul.social-share-button {
       font-size: 16px;
       font-weight: 500;
       padding-right: 1rem;
-      color: $ac-color-heading;
+      color: $color-heading;
       padding: 22px 0;
 
       &:focus {
@@ -528,11 +528,11 @@ ul.social-share-button {
         }
 
         &.is-active {
-          background-color: $ac-primary;
-          color: $ac-white;
+          background-color: $primary;
+          color: $white-100;
 
           svg {
-            fill: $ac-white;
+            fill: $white-100;
           }
         }
       }
@@ -548,7 +548,7 @@ ul.social-share-button {
     top: 64px;
     overflow-y: auto;
     padding-right: 30px;
-    border-right: 1px solid $ac-white-light;
+    border-right: 1px solid $color-border;
     height: calc(100vh - 0px);
 
     &::-webkit-scrollbar {
@@ -596,7 +596,7 @@ ul.social-share-button {
         }
 
         input {
-          accent-color: $ac-primary;
+          accent-color: $primary;
         }
       }
     }
@@ -604,7 +604,7 @@ ul.social-share-button {
 }
 
 .single-blog {
-  border: 1px solid $ac-white-light;
+  border: 1px solid $color-border;
   border-radius: 4px;
   transition: 0.3s ease-in-out;
   min-height: 400px;
@@ -617,7 +617,7 @@ ul.social-share-button {
   }
 
   &:hover {
-    border: 1px solid $ac-primary;
+    border: 1px solid $primary;
 
     a {
       img {
@@ -627,7 +627,7 @@ ul.social-share-button {
 
     h2 {
       a {
-        color: $ac-primary;
+        color: $primary;
       }
     }
 
@@ -672,7 +672,7 @@ ul.social-share-button {
     transition: 0.3s ease-in-out;
 
     a {
-      color: $ac-color-heading;
+      color: $color-heading;
     }
   }
 
@@ -689,7 +689,7 @@ ul.social-share-button {
     &:hover {
       h2 {
         a {
-          color: $ac-primary;
+          color: $primary;
         }
       }
 
@@ -712,7 +712,7 @@ ul.social-share-button {
       margin-bottom: 15px;
 
       a {
-        color: $ac-color-heading;
+        color: $color-heading;
       }
     }
 
@@ -815,7 +815,7 @@ ul.social-share-button {
 
         &:hover,
         &.is-active {
-          color: $ac-primary;
+          color: $primary;
         }
       }
     }
@@ -891,7 +891,7 @@ ul.social-share-button {
       margin-right: 0;
       border-right: none;
       padding-right: 15px;
-      border-bottom: 1px solid $ac-white-light;
+      border-bottom: 1px solid $color-border;
 
       .collapsable-menu {
         &:last-child {
