--- a/static/assets/sass/base/utilities/_typography.scss
+++ b/static/assets/sass/base/utilities/_typography.scss
@@ -15,7 +15,7 @@ body {
   font-family: $ac-font-paragraph;
   font-weight: 400;
   font-size: 1rem;
-  color: $color-text;;
+  color: $color-text;
   scroll-behavior: smooth;
 }
 
@@ -128,7 +128,7 @@ hr {
 }
 
 strong {
-  color: $color-text;;
+  color: $color-text;
   font-weight: 500;
 }
 
