--- a/static/assets/sass/components/_navbar.scss
+++ b/static/assets/sass/components/_navbar.scss
@@ -181,7 +181,7 @@
 
 .back-button {
   display: none !important;
-  color: $color-text;;
+  color: $color-text;
   margin-bottom: 10px !important;
   background-color: transparent;
 }
