--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -21,7 +21,7 @@
   figcaption {
     max-width: 80%;
     margin: 0 auto;
-    color: $color-text;;
+    color: $color-text;
     opacity: 0.8;
     padding: 10px 0;
     border-bottom: 1px solid $color-border;
