--- a/static/assets/sass/base/utilities/_global.scss
+++ b/static/assets/sass/base/utilities/_global.scss
@@ -308,7 +308,7 @@
   .ss-multi-selected {
     min-height: 45px !important;
     border: 1px solid #a6abbd;
-    color: $color-text;;
+    color: $color-text;
     padding: 0 15px;
 
     .ss-arrow {
@@ -316,7 +316,7 @@
     }
     .placeholder {
       font-size: 15px;
-      color: $color-text;;
+      color: $color-text;
       font-weight: 500;
     }
     .ss-values {
@@ -353,7 +353,7 @@
     .ss-list {
       .ss-option {
         font-size: 14px;
-        color: $color-text;;
+        color: $color-text;
         transition: 0.3s ease-in-out;
 
         &:hover {
