--- a/static/assets/sass/components/_button.scss
+++ b/static/assets/sass/components/_button.scss
@@ -148,7 +148,7 @@
   margin: 0;
   padding: 0;
   font-size: 0.875rem;
-  color: $color-text;;
+  color: $color-text;
   font-weight: 500;
   border: none;
   background: transparent;
