--- a/static/assets/sass/components/_footer.scss
+++ b/static/assets/sass/components/_footer.scss
@@ -61,7 +61,7 @@
 
 .all-contact-info li a,
 p.spam-message {
-  color: $color-text;;
+  color: $color-text;
   display: inline-block;
   font-size: 14px;
   font-family: $ac-font-paragraph;
@@ -89,7 +89,7 @@ p.spam-message {
 .footer-link {
   li {
     a {
-      color: $color-text;;
+      color: $color-text;
       font-size: 14px;
       display: block;
       padding: 8px 0;
@@ -118,7 +118,7 @@ p.spam-message {
 
   p {
     font-size: 14px;
-    color: $color-text;;
+    color: $color-text;
     margin-bottom: 0;
   }
 }
